<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_screen">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:text="@string/your_profile_text"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="145dp"
        android:layout_height="148dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/categoryListView"
        android:layout_width="404dp"
        android:layout_height="311dp"
        android:layout_gravity="top"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="407dp"
        android:layout_height="25dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="4dp"
        android:text="@string/advertising_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/screenNameTextView1"
        android:layout_width="220dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/screen_name_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/screenNameTextView"
        android:layout_width="220dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screenNameTextView1" />

    <TextView
        android:id="@+id/pricePerTimeTextView"
        android:layout_width="220dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pricePerTimeTextView1" />

    <TextView
        android:id="@+id/pricePerTimeTextView1"
        android:layout_width="220dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/price_per_time_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screenNameTextView" />

    <TextView
        android:id="@+id/characteristicTextView1"
        android:layout_width="220dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/characteristics_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pricePerTimeTextView" />

    <TextView
        android:id="@+id/trafficTextView"
        android:layout_width="220dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trafficTextView1" />

    <TextView
        android:id="@+id/characteristicsTextView"
        android:layout_width="220dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characteristicTextView1" />

    <TextView
        android:id="@+id/addressTextView1"
        android:layout_width="350dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/address_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trafficTextView" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="350dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressTextView1" />

    <TextView
        android:id="@+id/trafficTextView1"
        android:layout_width="220dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/traffic_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characteristicsTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>