<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:text="@string/your_profile_text"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/editNameImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="#00FFFFFF"
        android:src="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="@+id/editName"
        app:layout_constraintStart_toEndOf="@+id/editName"
        app:layout_constraintTop_toTopOf="@+id/editName"
        app:layout_constraintVertical_bias="0.56" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toStartOf="@+id/editNameImage"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="wrap" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toStartOf="@+id/editNameImage"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="wrap" />

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toStartOf="@+id/editPhoneNumberImage"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="wrap" />

    <ImageButton
        android:id="@+id/editEmailImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="#00FFFFFF"
        android:src="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="@+id/editEmail"
        app:layout_constraintStart_toEndOf="@+id/editEmail"
        app:layout_constraintTop_toTopOf="@+id/editEmail"
        app:layout_constraintVertical_bias="0.56" />

    <ImageButton
        android:id="@+id/editPhoneNumberImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="#00FFFFFF"
        android:src="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="@+id/editPhoneNumber"
        app:layout_constraintStart_toEndOf="@+id/editPhoneNumber"
        app:layout_constraintTop_toTopOf="@+id/editPhoneNumber"
        app:layout_constraintVertical_bias="0.56" />

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="145dp"
        android:layout_height="148dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="28dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/categoryListView"
        android:layout_width="191dp"
        android:layout_height="132dp"
        android:layout_gravity="top"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="288dp"
        android:text="@string/categories_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/save_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryListView" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/logout_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewPasswordText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="150dp"
        android:layout_height="28dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:text="@string/language_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile" />

    <ImageButton
        android:id="@+id/engButtonProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#00FFFFFF"
        android:onClick="SetEngLang"
        app:layout_constraintEnd_toStartOf="@+id/ukrButtonProfile"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/united_states_lang" />

    <ImageButton
        android:id="@+id/ukrButtonProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="52dp"
        android:background="#00FFFFFF"
        android:onClick="SetUkrLang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/ukraine_lang" />

    <EditText
        android:id="@+id/currentPasswordText"
        android:layout_width="174dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/current_password_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/NewPasswordText"
        android:layout_width="174dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/new_password_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentPasswordText" />

</androidx.constraintlayout.widget.ConstraintLayout>